@@ -57,7 +57,7 @@ include(dirname(__FILE__).'/top.php');
 					<th><?php echo L_CAT_LIST_ACTIVE ?></th>
 					<th><?php echo L_CAT_LIST_SORT ?></th>
 					<th><?php echo L_CAT_LIST_BYPAGE ?></th>
-					<th><?php echo L_CAT_LIST_ORDER ?></th>
+					<th data-id="order"><?php echo L_CAT_LIST_ORDER ?></th>
 					<th><?php echo L_CAT_LIST_MENU ?></th>
 					<th>&nbsp;</th>
 				</tr>
@@ -70,8 +70,8 @@ include(dirname(__FILE__).'/top.php');
 			if($plxAdmin->aCats) {
 				foreach($plxAdmin->aCats as $k=>$v) { # Pour chaque catégorie
 					$ordre = ++$num;
-					echo '<tr>';
-					echo '<td><input type="checkbox" name="idCategory[]" value="'.$k.'" /><input type="hidden" name="catNum[]" value="'.$k.'" /></td>';
+					echo '<tr draggable="true" ondragend="DragDrop.dragend(event, \'categories-table\')" ondragenter="DragDrop.dragenter(event)" ondragstart="DragDrop.dragstart(event)">';
+					echo '<td class="tb-drag-icon"><input type="checkbox" name="idCategory[]" value="'.$k.'" /><input type="hidden" name="catNum[]" value="'.$k.'" /></td>';
 					echo '<td>'.$k.'</td><td>';
 					plxUtils::printInput($k.'_name', plxUtils::strCheck($v['name']), 'text', '-50');
 					echo '</td><td>';
