@@ -1,5 +1,6 @@
 ## PLUXML x.x (sortie : xx/xx/xxxx) ##
 
+Administration: Tri ordre des catégories et des pages statiques par drag&drop
 BUG Suppression fichier plugin update impossible (droit fichier)
 
 ## PLUXML 5.6 (sortie : 05/04/2017) ##
